...
            super.observeValue(forKeyPath: keyPath, of: object, change: change, context: context)
        }
    }
    
    // MARK: - Private Methods
    private func setupAccessibilityIdentifiers() {
        // Устанавливаем ID, который вы используете в ImageFeedUITests: app.webViews["UnsplashWebView"]
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
}

// MARK: - WKNavigationDelegate
extension WebViewViewController: WKNavigationDelegate {
...
